data/derived/comb/progs/unify/prog6489.ml.out
Characters 76-85:
  |Sine s -> "sin(pi*"+exprToString s+")"
             ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
